# gola

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
crates/gola-ag-ui-server/: Cargo.toml
crates/gola-ag-ui-server/src/: agent.rs  error.rs  lib.rs  main.rs  sse.rs
crates/gola-ag-ui-types/: Cargo.toml
crates/gola-ag-ui-types/ag-ui-types/: Cargo.toml
crates/gola-ag-ui-types/ag-ui-types/src/: error.rs  events.rs  lib.rs  types.rs
crates/gola-ag-ui-types/src/: authorization.rs  error.rs  events.rs  lib.rs  types.rs
crates/gola-agent-client/: Cargo.toml
crates/gola-agent-client/src/: direct_client.rs  http_client.rs  lib.rs  types.rs
crates/gola-cli/: Cargo.toml
crates/gola-cli/src/: direct_gola_term_client.rs  embedded_ui.rs  lib.rs  main.rs  remote_gola_term_client.rs
crates/gola-core/: Cargo.toml
crates/gola-core/src/: ag_ui_handler.rs  agent.rs  agent_factory.rs  authorization_client.rs  core_types.rs  errors.rs  guardrails.rs  lib.rs  polling_authorization_handler.rs  sse_authorization_handler.rs  test_rag_integration.rs  trace.rs
crates/gola-core/src/config/: builder.rs  github.rs  loader.rs  mod.rs  tests.rs  types.rs  validation.rs
crates/gola-core/src/config/defaults/: context.rs  minimal_test.rs  mod.rs  profiles.rs  tests.rs  traits.rs
crates/gola-core/src/config/defaults/providers/: convention.rs  environment.rs  environment_detector.rs  environment_selector.rs  environment_tests.rs  environment_types.rs  hardcoded.rs  mod.rs  profile.rs
crates/gola-core/src/executors/: docker.rs  installer.rs  mod.rs  runtime_bootstrapping_test.rs  runtime_manager.rs
crates/gola-core/src/installation/: errors.rs  integration_tests.rs  mod.rs  tests.rs  traits.rs
crates/gola-core/src/installation/binary/: cache.rs  docker_manager.rs  manager.rs  mod.rs  orchestrator.rs
crates/gola-core/src/installation/binary/strategies/: docker.rs  github.rs  mod.rs  source.rs
crates/gola-core/src/llm/: auto_recovery_llm.rs  context_truncation.rs  message_validator.rs  mod.rs  response_parser.rs  summarizer.rs  utils.rs
crates/gola-core/src/llm/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/gola-core/src/loop_detection/: mod.rs  pattern_detector.rs  similarity.rs
crates/gola-core/src/memory/: agent.rs  conversation_summary.rs  mod.rs  sliding_window.rs  summary_buffer.rs
crates/gola-core/src/rag/: cache.rs  embeddings.rs  mod.rs  rag_system.rs  splitter.rs  vector_store.rs
crates/gola-core/src/test_utils/: mock_llm_server.rs  mod.rs
crates/gola-core/src/tools/: calculator.rs  mcp_client.rs  mod.rs  rag_search_tool.rs  rag_tool.rs  rmcp_client.rs  web_search.rs
crates/gola-core/src/tools/control_plane/: assistant_done.rs  mod.rs  report_progress.rs  server.rs
crates/gola-core/src/tracing/: mod.rs  tests.rs
crates/gola-core/tests/: memory_integration_test.rs  rest_embeddings_integration.rs
crates/gola-server/: Cargo.toml
crates/gola-server/src/: main.rs
crates/gola-term/: Cargo.toml  Dockerfile  build.rs  cliff.toml  config.example.toml
crates/gola-term/src/: lib.rs  main.rs
crates/gola-term/src/application/: cli.rs  mod.rs  ui.rs
crates/gola-term/src/configuration/: config.rs  config_test.rs  mod.rs
crates/gola-term/src/domain/: mod.rs
crates/gola-term/src/infrastructure/: mod.rs
crates/gola-term/test/snapshots/: gola_term__configuration__config__tests__it_serializes_to_valid_toml.snap  gola_term__domain__services__app_state__tests__handle_slash_commands__it_copies_code_block.snap  gola_term__domain__services__app_state__tests__handle_slash_commands__it_replaces_code_block.snap  gola_term__domain__services__bubble__tests__it_creates_author_model_text_code_multiple_blocks.snap  gola_term__domain__services__bubble__tests__it_creates_author_user_text.snap  gola_term__infrastructure__backends__claude__tests__it_gets_completions.snap  gola_term__infrastructure__backends__gemini__tests__it_gets_completions.snap  gola_term__infrastructure__backends__openai__tests__it_gets_completions.snap
crates/gola-term/test/utils/: Cargo.toml
crates/gola-term/tools/: apt.sh  choco.sh  goreleaser-dist.sh  goreleaser.go  nur.sh  release.sh  yum.sh
crates/gola-term/tools/node/: package-lock.json  package.json
crates/gola-term/tools/xtask/: Cargo.toml
examples/gola-sherpa-agent/: README.md
integration_tests/: run_integration_tests.sh
scripts/: build-docker.sh
testbed/fixtures/scenarios/01_minimal_config/: Dockerfile  gola.yaml
testbed/fixtures/scenarios/02_no_python/: Dockerfile  scenario.yaml
testbed/fixtures/scenarios/02_task_mode/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/03_prompt_only/: gola.yaml  scenario.yaml
testbed/fixtures/scenarios/04_basic_mcp/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/05_mcp_success/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/06_npm_mcp_fail/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/07_npm_mcp_success/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/08_embedded_runtime_mcp/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/09_bun_embedded_mcp/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/10_anthropic_llm/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/11_gemini_llm/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/12_auto_detect_openai/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/13_auto_detect_anthropic/: Dockerfile  gola.yaml  scenario.yaml
testbed/fixtures/scenarios/14_auto_detect_gemini/: Dockerfile  gola.yaml  scenario.yaml
testbed/harness/: Cargo.toml
testbed/harness/src/: main.rs
testbed/mocks/: Cargo.toml
testbed/mocks/services/github/: Cargo.toml  Dockerfile  Dockerfile.simple  Dockerfile.workspace
testbed/mocks/services/github/src/: fixtures.rs  handlers.rs  lib.rs  main.rs  server.rs
testbed/mocks/src/: agent.rs  auth.rs  lib.rs  llm.rs  tools.rs
(+51 files in other folders)
