[workspace]
members = [
    "crates/gola-core",
    "crates/gola-server",
    "crates/gola-term",
    "crates/gola-cli",
    "crates/gola-ag-ui-types",
    "crates/gola-ag-ui-server",
    "crates/gola-agent-client",
    "testbed/harness",
    "testbed/mocks/services/github"]

resolver = "2"

[workspace.package]
authors = ["Gianluca Brigandi <gbrigand@gmail.com>"]

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0.98"
log = "0.4"
env_logger = "0.11"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
jsonschema = "0.18"
urlencoding = "2.1"
bollard = "0.19"
tempfile = "3"
futures-util = "0.3.31"
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
rmcp = { version = "0.2.1", features = ["transport-child-process", "client"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Terminal UI dependencies
crossterm = "0.28"
ratatui = { version="0.29.0" }

# Additional dependencies for ag-ui-server
async-stream = "0.3"
tokio-util = "0.7"
dirs = "6.0"
bincode = "2.0.1"
pin-project = "1.0"
