[package]
name = "gola-agent-client"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
gola-ag-ui-types = { path = "../gola-ag-ui-types" }
gola-ag-ui-server = { path = "../gola-ag-ui-server" }
async-stream = { workspace = true }
futures = "0.3"
pin-project = "1.0"
futures-util = { workspace = true }