[package]
name = "gola-cli"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Command-line interface for the Gola agent framework"

[[bin]]
name = "gola"
path = "src/main.rs"

[dependencies]
gola-core = { path = "../gola-core" }
gola-ag-ui-server = { path = "../gola-ag-ui-server" }
gola-ag-ui-types = { path = "../gola-ag-ui-types" }
gola-agent-client = { path = "../gola-agent-client" }
gola-term = { path = "../gola-term" }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "io-util"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
better-panic = "0.3"
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = "6.0"
futures-util = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
