[package]
name = "gola-test-mocks"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
gola-core = { path = "../../crates/gola-core" }
gola-ag-ui-types = { path = "../../crates/gola-ag-ui-types" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "gola_test_mocks"
path = "src/lib.rs"